idea/testData/debugger/sequence/psi/streams/positive/location/SingleExpression.kt
import java.util.stream.IntStream

fun main(args: Array<String>) {
<caret> IntStream.range(1, 2).forEach { x -> }
}
